--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </h2>
         <div class="content">
             <div class="thumbnail">
-                <img src="assets\img\foto-perfil.jpg" alt="Gabriel na Comic-Con 2020">
+                <img src="assets/img/foto-perfil.jpg" alt="Gabriel na Comic-Con 2020">
             </div>
             <div class="section-text">
                 <p><span class="attribute">Nome: </span>Gabriel Eiji Mariano de Menezes Tomonari</p>
@@ -41,7 +41,7 @@
         <h2 class="section-title">Desenho favorito de infância</h2>
         <div class="content">
             <div class="thumbnail">
-                <img src="assets\img\desenho.jpg" alt="Bob, o Construtor">
+                <img src="assets/img/desenho.jpg" alt="Bob, o Construtor">
             </div>
             <div class="section-text">
                 <p><span class="attribute">Nome: </span>Bob, o Construtor</p>
