--- a/index.html
+++ b/index.html
@@ -5,50 +5,98 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="Um pouco sobre mim">
-    <meta name="author" content="Takeshi">
-    <title>Gabriel Tomonari "Takeshi"</title>
+    <meta name="author" content="Gabriel Tomonari">
+    <title>Gabriel Tomonari</title>
     <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="./css/font-awesome.min.css"> -->
 </head>
 
 <body>
     <header>
         <div class="container">
-            <div class="content">
+            <div class="header-content">
                 <h1>Gabriel Tomonari</h1>
-                <h3>Um pouco sobre mim</h3>
+                <h3>Engenharia de Computação - UNICAMP</h3>
             </div>
         </div>
     </header>
     <section id="sobre-mim">
-        <h2 class="section-title">
-            Sobre mim
-        </h2>
-        <div class="content">
-            <div class="thumbnail">
-                <img src="assets/img/foto-perfil.jpg" alt="Gabriel na Comic-Con 2020">
+        <div class="wrapper">
+            <div class="profile-thumbnail">
             </div>
             <div class="section-text">
-                <p><span class="attribute">Nome: </span>Gabriel Eiji Mariano de Menezes Tomonari</p>
-                <p><span class="attribute">Idade: </span>20 anos</p>
-                <p><span class="attribute">Cidade de origem: </span>São João d'Aliança - GO</p>
+                <p><span class="greetings">Olá,</span></p>
+                <p class="name"><span>Eu sou </span>Gabriel Tomonari</p>
+                <hr>
+                <p><span class="attribute">Idade</span>20 anos</p>
+                <p><span class="attribute">Cidade de origem</span>São João d'Aliança - GO</p>
                 <br>
                 <p><a href="#" class="button">Mais informações</a></p>
+                <ul>
+                    <li class='social-media'><a href="http://www.linkedin.com/in/gabrieltomonari" target="_blank">
+                            <svg height="2em" viewBox="0 0 512 512" width="2em" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="m256 0c-141.363281 0-256 114.636719-256 256s114.636719 256 256 256 256-114.636719 256-256-114.636719-256-256-256zm-74.390625 387h-62.347656v-187.574219h62.347656zm-31.171875-213.1875h-.40625c-20.921875 0-34.453125-14.402344-34.453125-32.402344 0-18.40625 13.945313-32.410156 35.273437-32.410156 21.328126 0 34.453126 14.003906 34.859376 32.410156 0 18-13.53125 32.402344-35.273438 32.402344zm255.984375 213.1875h-62.339844v-100.347656c0-25.21875-9.027343-42.417969-31.585937-42.417969-17.222656 0-27.480469 11.601563-31.988282 22.800781-1.648437 4.007813-2.050781 9.609375-2.050781 15.214844v104.75h-62.34375s.816407-169.976562 0-187.574219h62.34375v26.558594c8.285157-12.78125 23.109375-30.960937 56.1875-30.960937 41.019531 0 71.777344 26.808593 71.777344 84.421874zm0 0" />
+                            </svg>
+                        </a></li>
+                    <li class='social-media'><a href="https://github.com/GabrielTomonari" target="_blank">
+                            <svg id="Bold" enable-background="new 0 0 24 24" height="2em" viewBox="0 0 24 24"
+                                width="2em" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="m12 .5c-6.63 0-12 5.28-12 11.792 0 5.211 3.438 9.63 8.205 11.188.6.111.82-.254.82-.567 0-.28-.01-1.022-.015-2.005-3.338.711-4.042-1.582-4.042-1.582-.546-1.361-1.335-1.725-1.335-1.725-1.087-.731.084-.716.084-.716 1.205.082 1.838 1.215 1.838 1.215 1.07 1.803 2.809 1.282 3.495.981.108-.763.417-1.282.76-1.577-2.665-.295-5.466-1.309-5.466-5.827 0-1.287.465-2.339 1.235-3.164-.135-.298-.54-1.497.105-3.121 0 0 1.005-.316 3.3 1.209.96-.262 1.98-.392 3-.398 1.02.006 2.04.136 3 .398 2.28-1.525 3.285-1.209 3.285-1.209.645 1.624.24 2.823.12 3.121.765.825 1.23 1.877 1.23 3.164 0 4.53-2.805 5.527-5.475 5.817.42.354.81 1.077.81 2.182 0 1.578-.015 2.846-.015 3.229 0 .309.21.678.825.56 4.801-1.548 8.236-5.97 8.236-11.173 0-6.512-5.373-11.792-12-11.792z" />
+                            </svg>
+                        </a></li>
+                    <li class='social-media'><a href="https://www.facebook.com/gabrieltomonari/" target="_blank">
+                            <svg height="2em" viewBox="0 0 512 512" width="2em" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="m297.277344 508.667969c-2.132813.347656-4.273438.667969-6.421875.960937 2.148437-.292968 4.289062-.613281 6.421875-.960937zm0 0" />
+                                <path
+                                    d="m302.398438 507.792969c-1.019532.1875-2.039063.359375-3.058594.535156 1.019531-.175781 2.039062-.347656 3.058594-.535156zm0 0" />
+                                <path
+                                    d="m285.136719 510.339844c-2.496094.28125-5.007813.53125-7.527344.742187 2.519531-.210937 5.03125-.460937 7.527344-.742187zm0 0" />
+                                <path
+                                    d="m290.054688 509.738281c-1.199219.160157-2.40625.308594-3.609376.449219 1.203126-.140625 2.410157-.289062 3.609376-.449219zm0 0" />
+                                <path
+                                    d="m309.367188 506.410156c-.898438.191406-1.800782.382813-2.703126.566406.902344-.183593 1.804688-.375 2.703126-.566406zm0 0" />
+                                <path
+                                    d="m326.664062 502.113281c-.726562.207031-1.453124.402344-2.179687.605469.726563-.203125 1.453125-.398438 2.179687-.605469zm0 0" />
+                                <path
+                                    d="m321.433594 503.542969c-.789063.207031-1.582032.417969-2.375.617187.792968-.199218 1.585937-.40625 2.375-.617187zm0 0" />
+                                <path
+                                    d="m314.589844 505.253906c-.835938.195313-1.679688.378906-2.523438.566406.84375-.1875 1.6875-.371093 2.523438-.566406zm0 0" />
+                                <path
+                                    d="m277.527344 511.089844c-1.347656.113281-2.695313.214844-4.046875.304687 1.351562-.089843 2.699219-.191406 4.046875-.304687zm0 0" />
+                                <path
+                                    d="m512 256c0-141.363281-114.636719-256-256-256s-256 114.636719-256 256 114.636719 256 256 256c1.503906 0 3-.03125 4.5-.058594v-199.285156h-55v-64.097656h55v-47.167969c0-54.703125 33.394531-84.476563 82.191406-84.476563 23.367188 0 43.453125 1.742188 49.308594 2.519532v57.171875h-33.648438c-26.546874 0-31.6875 12.617187-31.6875 31.128906v40.824219h63.476563l-8.273437 64.097656h-55.203126v189.453125c107.003907-30.675781 185.335938-129.257813 185.335938-246.109375zm0 0" />
+                                <path
+                                    d="m272.914062 511.429688c-2.664062.171874-5.339843.308593-8.023437.398437 2.683594-.089844 5.359375-.226563 8.023437-.398437zm0 0" />
+                                <path
+                                    d="m264.753906 511.835938c-1.414062.046874-2.832031.082031-4.25.105468 1.417969-.023437 2.835938-.058594 4.25-.105468zm0 0" />
+                            </svg>
+                        </a></li>
+                    <li class='social-media'><a href="https://twitter.com/TomonariGabriel" target="_blank">
+                            <svg height="2em" viewBox="0 0 512 512" width="2em" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="m256 0c-141.363281 0-256 114.636719-256 256s114.636719 256 256 256 256-114.636719 256-256-114.636719-256-256-256zm116.886719 199.601562c.113281 2.519532.167969 5.050782.167969 7.59375 0 77.644532-59.101563 167.179688-167.183594 167.183594h.003906-.003906c-33.183594 0-64.0625-9.726562-90.066406-26.394531 4.597656.542969 9.277343.8125 14.015624.8125 27.53125 0 52.867188-9.390625 72.980469-25.152344-25.722656-.476562-47.410156-17.464843-54.894531-40.8125 3.582031.6875 7.265625 1.0625 11.042969 1.0625 5.363281 0 10.558593-.722656 15.496093-2.070312-26.886718-5.382813-47.140624-29.144531-47.140624-57.597657 0-.265624 0-.503906.007812-.75 7.917969 4.402344 16.972656 7.050782 26.613281 7.347657-15.777343-10.527344-26.148437-28.523438-26.148437-48.910157 0-10.765624 2.910156-20.851562 7.957031-29.535156 28.976563 35.554688 72.28125 58.9375 121.117187 61.394532-1.007812-4.304688-1.527343-8.789063-1.527343-13.398438 0-32.4375 26.316406-58.753906 58.765625-58.753906 16.902344 0 32.167968 7.144531 42.890625 18.566406 13.386719-2.640625 25.957031-7.53125 37.3125-14.261719-4.394531 13.714844-13.707031 25.222657-25.839844 32.5 11.886719-1.421875 23.214844-4.574219 33.742187-9.253906-7.863281 11.785156-17.835937 22.136719-29.308593 30.429687zm0 0" />
+                                </svg>
+                        </a></li>
+                </ul>
             </div>
         </div>
     </section>
     <section id="desenho">
         <h2 class="section-title">Desenho favorito de infância</h2>
         <div class="content">
-            <div class="thumbnail">
-                <img src="assets/img/desenho.jpg" alt="Bob, o Construtor">
+            <div class="section-thumbnail">
             </div>
-            <div class="section-text">
-                <p><span class="attribute">Nome: </span>Bob, o Construtor</p>
-                <p><span class="attribute">Motivo: </span>Gostava muito de "Bob, o Construtor" pois em
+            <div class="section-text animation-text">
+                <p class="animation-title"></span>Bob, o Construtor</p>
+                <p>Quando eu era criança, esse era meu desenho favorito! Gostava muito de "Bob, o Construtor" pois em
                 cada episódio a turma enfrentava um novo desafio, um novo problema a ser resolvido. O mais legal é
-            que cada personagem, as máquinas com as quais Bob trabalhava (guindaste, escavadeira, betoneira), tinha uma
-        habilidade única, e, para resolver o problema, o trabalho em equipe era essencial. Teste.</p>
+            que cada personagem, as máquinas com as quais Bob trabalhava (guindaste, escavadeira, betoneira, etc), tinham 
+            habilidades únicas e, para resolver o problema, o trabalho em equipe com todas as habilidades era essencial. Outra coisa da qual
+        gostava muito era quando, em episódios especiais, uma máquina nova, com outra habilidade, aparecia.</p>
             </div>
         </div>
     </section>
