--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p><span class="attribute">Idade</span>20 anos</p>
                 <p><span class="attribute">Cidade de origem</span>São João d'Aliança - GO</p>
                 <br>
-                <p><a href="#" class="button">Mais informações</a></p>
+                <p><a href="about.html" class="button">Mais informações</a></p>
                 <ul>
                     <li class='social-media'><a href="http://www.linkedin.com/in/gabrieltomonari" target="_blank">
                             <svg height="2em" viewBox="0 0 512 512" width="2em" xmlns="http://www.w3.org/2000/svg">
