--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Um pouco sobre mim">
     <meta name="author" content="Gabriel Tomonari">
     <title>Gabriel Tomonari</title>
@@ -16,8 +16,10 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <h1>Gabriel Tomonari</h1>
-                <h3>Engenharia de Computação - UNICAMP</h3>
+                <a href="index.html">
+                    <h1>Gabriel Tomonari</h1>
+                    <h3>Engenharia de Computação - UNICAMP</h3>
+                </a>
             </div>
         </div>
     </header>
@@ -27,14 +29,19 @@
             <h2 class="other-title">Quem sou eu</h2>
         </div>
         <div class="wrapper">
-            <p>Conhecido entre meus amigos como <span>Takeshi</span>, sou da cidade de São João d'Aliança - GO,
+            <p>Sou da cidade de São João d'Aliança - GO,
                 localizada na Chapada dos Veadeiros. Sendo esta uma cidade pequena, cerca de 8 mil habitantes,
-                e, portanto, carente de recursos e estrutura para aprendizado, fui obrigado a desenvolver dois dos que
-                considero alguns de meus maiores pontos fortes: o autodidatismo e a disciplina.
-                Desde pequeno sou apaixonado por aprender, gosto de aprender qualquer coisa. Dessa forma, com o grande
-                interesse que tinha por tecnologia, investi muito tempo em adquirir habilidades
-                na área de desenvolvimento web, mobile e eletrônica. Assim, percebi desde cedo que queria cursar
-                engenharia, posteriormente me decidindo a respeito da Engenharia de Computação.</p>
+                e, portanto, carente de recursos e estrutura para aprendizado, busquei desenvolver e praticar o
+                autodidatismo e a disciplina para compensar por minha desvantagem competitiva.
+                Desde pequeno sou apaixonado por aprender, gosto sempre de adquirir um novo conhecimento, não só da
+                minha
+                área, mas também de ciências naturais, finanças, administração, enfim, aprender algo novo. Dessa forma,
+                com a grande
+                paixão que tenho por tecnologia, investi muito tempo em adquirir habilidades
+                na área de desenvolvimento web, mobile e eletrônica. Com isso, percebi desde cedo que o meu foco era
+                Engenharia e, após conversar com vários profissionais, visitar algumas Universidades e conhecer as
+                possibilidades dos campos de atuação de cada profissional, tive a certeza de que a minha área de atuação
+                é em Engenharia de Computação.</p>
         </div>
     </section>
     <section id="habilidades">
@@ -66,6 +73,7 @@
                 <ul class="card-list">
                     <li>Arduino</li>
                     <li>C++</li>
+                    <li>Eletrônica intermediária</li>
                 </ul>
                 <p class="card-ongoing"><span>Aperfeiçoando no momento: </span>Raspberry Pi</p>
             </div>
@@ -89,6 +97,13 @@
                 <ul class="card-list">
                     <li>Arquitetura e manutenção de redes</li>
                     <li>Montagem e manutenção de computadores</li>
+                </ul>
+            </div>
+            <div class="card">
+                <h3 class="card-title">Modelagem 3D e CAD</h3>
+                <ul class="card-list">
+                    <li>Autodesk Fusion 360 Avançado</li>
+                    <li>Autodesk AutoCAD Intermediário</li>
                 </ul>
             </div>
             <div class="card">
@@ -164,6 +179,39 @@
                 <ul class="card-list">
                     <li>OBEMP - Olimpíada Brasileira de Matemática das Escolas Públicas</li>
                     <li>2014</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section id="hobbies">
+        <div class="title">
+            <img src="assets/img/hobbies.png" class="title-icon" alt="Hobbies">
+            <h2 class="other-title">Hobbies</h2>
+        </div>
+        <div class="cards">
+            <div class="card">
+                <h3 class="card-title">Impressão 3D</h3>
+                <ul class="card-list">
+                    <li>Gosto muito de projetar e imprimir modelos na minha impressora 3D</li>
+                </ul>
+            </div>
+            <div class="card">
+                <h3 class="card-title">Instrumentos Musicais</h3>
+                <ul class="card-list">
+                    <li>Atualmente toco piano (tenho um teclado em casa) e guitarra</li>
+                </ul>
+            </div>
+            <div class="card">
+                <h3 class="card-title">Marcenaria</h3>
+                <ul class="card-list">
+                    <li>Acho o trabalho com madeira terapêutico. Tenho experiencia com ferramentas elétricas e
+                        fabricação de móveis</li>
+                </ul>
+            </div>
+            <div class="card">
+                <h3 class="card-title">Lego</h3>
+                <ul class="card-list">
+                    <li>Tenho uma coleção de Lego desde criança, sempre foi meu brinquedo favorito</li>
                 </ul>
             </div>
         </div>
