--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Um pouco sobre mim">
     <meta name="author" content="Gabriel Tomonari">
     <title>Gabriel Tomonari</title>
@@ -16,8 +16,10 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <h1>Gabriel Tomonari</h1>
-                <h3>Engenharia de Computação - UNICAMP</h3>
+                <a href="index.html">
+                    <h1>Gabriel Tomonari</h1>
+                    <h3>Engenharia de Computação - UNICAMP</h3>
+                </a>
             </div>
         </div>
     </header>
@@ -79,7 +81,7 @@
                             <svg height="2em" viewBox="0 0 512 512" width="2em" xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="m256 0c-141.363281 0-256 114.636719-256 256s114.636719 256 256 256 256-114.636719 256-256-114.636719-256-256-256zm116.886719 199.601562c.113281 2.519532.167969 5.050782.167969 7.59375 0 77.644532-59.101563 167.179688-167.183594 167.183594h.003906-.003906c-33.183594 0-64.0625-9.726562-90.066406-26.394531 4.597656.542969 9.277343.8125 14.015624.8125 27.53125 0 52.867188-9.390625 72.980469-25.152344-25.722656-.476562-47.410156-17.464843-54.894531-40.8125 3.582031.6875 7.265625 1.0625 11.042969 1.0625 5.363281 0 10.558593-.722656 15.496093-2.070312-26.886718-5.382813-47.140624-29.144531-47.140624-57.597657 0-.265624 0-.503906.007812-.75 7.917969 4.402344 16.972656 7.050782 26.613281 7.347657-15.777343-10.527344-26.148437-28.523438-26.148437-48.910157 0-10.765624 2.910156-20.851562 7.957031-29.535156 28.976563 35.554688 72.28125 58.9375 121.117187 61.394532-1.007812-4.304688-1.527343-8.789063-1.527343-13.398438 0-32.4375 26.316406-58.753906 58.765625-58.753906 16.902344 0 32.167968 7.144531 42.890625 18.566406 13.386719-2.640625 25.957031-7.53125 37.3125-14.261719-4.394531 13.714844-13.707031 25.222657-25.839844 32.5 11.886719-1.421875 23.214844-4.574219 33.742187-9.253906-7.863281 11.785156-17.835937 22.136719-29.308593 30.429687zm0 0" />
-                                </svg>
+                            </svg>
                         </a></li>
                 </ul>
             </div>
@@ -93,10 +95,13 @@
             <div class="section-text animation-text">
                 <p class="animation-title"></span>Bob, o Construtor</p>
                 <p>Quando eu era criança, esse era meu desenho favorito! Gostava muito de "Bob, o Construtor" pois em
-                cada episódio a turma enfrentava um novo desafio, um novo problema a ser resolvido. O mais legal é
-            que cada personagem, as máquinas com as quais Bob trabalhava (guindaste, escavadeira, betoneira, etc), tinham 
-            habilidades únicas e, para resolver o problema, o trabalho em equipe com todas as habilidades era essencial. Outra coisa da qual
-        gostava muito era quando, em episódios especiais, uma máquina nova, com outra habilidade, aparecia.</p>
+                    cada episódio a turma enfrentava um novo desafio, um novo problema a ser resolvido. O mais legal é
+                    que cada personagem, as máquinas com as quais Bob trabalhava (guindaste, escavadeira, betoneira,
+                    etc), tinham
+                    habilidades únicas e, para resolver o problema, o trabalho em equipe com todas as habilidades era
+                    essencial. Outra coisa da qual
+                    gostava muito era quando, em episódios especiais, uma máquina nova, com outra habilidade, aparecia.
+                </p>
             </div>
         </div>
     </section>
