--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Gabriel Tomonari</title>
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@900&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="./css/font-awesome.min.css"> -->
 </head>
 
