--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Um pouco sobre mim">
     <meta name="author" content="Gabriel Tomonari">
     <title>Gabriel Tomonari</title>
+    <link rel="icon" href="favicon.ico" sizes="16x16" type="image/ico">
     <link rel="stylesheet" href="./style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@900&display=swap" rel="stylesheet">
